# uneviedefourmi

./: .gitignore  CMakeLists.txt  README.md
assets/matrixs/: fourmillere_cinq.xlsx  fourmillere_deux.xlsx  fourmillere_quatre.xlsx  fourmillere_trois.xlsx  fourmillere_un.xlsx  fourmillere_zero.xlsx
assets/matrixs/anthill_0/: fourmillere_0_adj.csv  fourmillere_0_deg.csv  fourmillere_0_lap.csv
assets/matrixs/anthill_1/: fourmillere_1_adj.csv  fourmillere_1_deg.csv  fourmillere_1_lap.csv
assets/matrixs/anthill_2/: fourmillere_2_adj.csv  fourmillere_2_lap.csv
assets/matrixs/anthill_3/: fourmillere_3_adj.csv  fourmillere_3_deg.csv  fourmillere_3_lap.csv
assets/matrixs/anthill_4/: fourmillere_4_deg.csv  fourmillere_4_lap.csv
assets/matrixs/anthill_5/: fourmillere_5_adj.csv  fourmillere_5_deg.csv  fourmillere_5_lap.csv
include/: ant.hpp  anthill.hpp  room.hpp
src/: ant.cpp  anthill.cpp  main.cpp
